k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
  labels:
    app: backend-service
spec:
  type: ClusterIP
  selector:
    app: backend-service
  ports:
    - port: 80
      targetPort: 8000
